@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: bootstrap
-          image: iqss/dataverse-k8s:tt #5.13
+          image: iqss/dataverse-k8s:5.14
           command: ["scripts/bootstrap-job.sh"]
           envFrom:
             - configMapRef:
@@ -75,6 +75,9 @@ spec:
               mountPath: /var/lib/postgresql/data
               readOnly: true
       initContainers:
+#        - name: line-ending-init
+#          image: alpine:latest # You can choose a base image with sed pre-installed
+#          command: [ "sh", "-c", "sed -i 's/\r$//' /opt/payara/scripts/default.config" ]
         - name: check-db-ready
           image: postgres:13.11 #9.6
           command: ['sh', '-c',
