@@ -32,3 +32,21 @@ spec:
   resources:
     requests:
       storage: 6G
+
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: dataverse-logos
+  labels:
+    app.kubernetes.io/name: logos
+    app.kubernetes.io/version: "1.0"
+    app.kubernetes.io/component: storage
+    app.kubernetes.io/part-of: dataverse
+    app.kubernetes.io/managed-by: kubectl
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1G
